# ea-tree-repr

./: Cargo.toml  README.md  check-hcp  check-mbv
experiments/: Makefile  dimacs2tsp  mbv2tsp  run-combinations
experiments/plots/: euler-tour-change-any.tex  nddr-subtree-len-1.tex  nddr-subtree-len-2.tex  nddr-subtree-len-first-1.tex  omt-change-any.tex  omt-change-pred.tex  omt.tex  otm-change-any.tex  time-change-any-forest.tex  time-change-any-large.tex  time-change-any.tex  time-change-pred-forest.tex  time-change-pred-large.tex  time-change-pred.tex  time-copy-vs-mut-2.tex  time-copy-vs-mut-pred.tex  time-copy-vs-mut-pred2.tex  time-copy-vs-mut.tex  time-diameter-change-any.tex  time-diameter-change-pred.tex  time-diameter.tex  time-forest.tex  time-large.tex  time.tex
src/: bitset.rs  cowprop.rs  euler.rs  euler_simple.rs  lib.rs  logger.rs  parent.rs  predecessor.rs  progress.rs  random.rs  ranges.rs  tour.rs  tree.rs
src/nddr/: collect.rs  forest.rs  mod.rs  ndd.rs  one_tree.rs  one_tree_forest.rs  tree.rs
