[package]
name = "ea-tree-repr"
version = "0.1.0"
authors = ["Marco A L Barbosa"]
description = """Spanning tree representations for evolutionary algorithms
https://github.com/malbarbo/ec-tree-repr
"""

[dependencies]
clap = { version = "2.29", default-features = false, features = ["wrap_help"] }
fera = { version = "0.1", features = ["ext", "fun", "graph"] }
fera-array = { path = "../fera/array" }
pbr = "1.0"
rand = "0.4"

[profile.release]
debug = true
debug-assertions = true
