[package]
name = "ea-tree-repr"
version = "0.1.0"
authors = ["Marco A L Barbosa"]
description = """Spanning tree representations for evolutionary algorithms
https://github.com/malbarbo/ea-tree-repr
"""

[dependencies]
clap = { version = "2.29", default-features = false, features = ["wrap_help"] }
fera = { version = "0.2", features = ["array", "ext", "fun", "graph"] }
log = { version = "0.4", features = ["std"] }
pbr = "1.0"
rand = "0.5"
rayon = "1.0"
tsplib = "0.1"

[features]
system_allocator = []

[profile.release]
debug = true
# debug-assertions = true
